httproute-A.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: a-route
  namespace: default
spec:
  parentRefs:
  - name: my-shared-gateway
  hostnames:
  - "a.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: a-service
      port: 80
