httproute-B.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: b-route
  namespace: default
spec:
  parentRefs:
  - name: my-shared-gateway
  hostnames:
  - "b.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: b-service
      port: 80
